log/build_2024-02-11_17-40-54/swerve_drive_control/stderr.log
[0m[1m[38;5;9merror[E0433][0m[0m[1m: failed to resolve: use of undeclared crate or module `geometry_msgs`[0m
[0m  [0m[0m[1m[38;5;12m--> [0m[0msrc/main.rs:25:47[0m
[0m   [0m[0m[1m[38;5;12m|[0m
[0m[1m[38;5;12m25[0m[0m [0m[0m[1m[38;5;12m|[0m[0m [0m[0m    let subscriber = node.create_subscriber::<geometry_msgs::msg::Twist>("cmd_vel", None)?;[0m
[0m   [0m[0m[1m[38;5;12m| [0m[0m                                              [0m[0m[1m[38;5;9m^^^^^^^^^^^^^[0m[0m [0m[0m[1m[38;5;9muse of undeclared crate or module `geometry_msgs`[0m
[0m   [0m[0m[1m[38;5;12m|[0m
[0m[1m[38;5;14mhelp[0m[0m: consider importing this module[0m
[0m   [0m[0m[1m[38;5;12m|[0m
[0m[1m[38;5;12m1[0m[0m  [0m[0m[38;5;10m+ use safe_drive::msg::common_interfaces::geometry_msgs::msg;[0m
[0m   [0m[0m[1m[38;5;12m|[0m
[0m[1m[38;5;14mhelp[0m[0m: if you import `msg`, refer to it directly[0m
[0m   [0m[0m[1m[38;5;12m|[0m
[0m[1m[38;5;12m25[0m[0m [0m[0m[38;5;9m- [0m[0m    let subscriber = node.create_subscriber::<[0m[0m[38;5;9mgeometry_msgs::[0m[0mmsg::Twist>("cmd_vel", None)?;[0m
[0m[1m[38;5;12m25[0m[0m [0m[0m[38;5;10m+ [0m[0m    let subscriber = node.create_subscriber::<msg::Twist>("cmd_vel", None)?;[0m
[0m   [0m[0m[1m[38;5;12m|[0m

[0m[1m[33mwarning[0m[0m[1m: unused import: `pr_info`[0m
[0m [0m[0m[1m[38;5;12m--> [0m[0msrc/main.rs:2:56[0m
[0m  [0m[0m[1m[38;5;12m|[0m
[0m[1m[38;5;12m2[0m[0m [0m[0m[1m[38;5;12m|[0m[0m [0m[0m    context::Context, error::DynError, logger::Logger, pr_info[0m
[0m  [0m[0m[1m[38;5;12m| [0m[0m                                                       [0m[0m[1m[33m^^^^^^^[0m
[0m  [0m[0m[1m[38;5;12m|[0m
[0m  [0m[0m[1m[38;5;12m= [0m[0m[1mnote[0m[0m: `#[warn(unused_imports)]` on by default[0m

[0m[1m[33mwarning[0m[0m[1m: unused import: `num_traits::pow::Pow`[0m
[0m [0m[0m[1m[38;5;12m--> [0m[0msrc/main.rs:5:5[0m
[0m  [0m[0m[1m[38;5;12m|[0m
[0m[1m[38;5;12m5[0m[0m [0m[0m[1m[38;5;12m|[0m[0m [0m[0muse num_traits::pow::Pow;[0m
[0m  [0m[0m[1m[38;5;12m| [0m[0m    [0m[0m[1m[33m^^^^^^^^^^^^^^^^^^^^[0m

[0m[1mFor more information about this error, try `rustc --explain E0433`.[0m
[1m[31merror[0m[1m:[0m could not compile `swerve_drive_control` (bin "swerve_drive_control") due to previous error; 2 warnings emitted
